# tress

./: .envrc  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  index.html  justfile  package-lock.json  package.json  plan.md  rust-toolchain.toml
.github/workflows/: ci.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250627_071849_push_subscriptions.rs  m20260317_062834_add_users.rs  m20260403_104503_add_last_synced_at_to_feeds.rs  m20260403_112314_change_last_synced_at_to_integer.rs
src/: auth_middleware.rs  config.rs  jwks.rs  main.rs
src/entities/: feeds.rs  mod.rs  posts.rs  prelude.rs  push_subscriptions.rs  users.rs
ui/: .gitignore  index.html  package-lock.json  package.json  pubspec.yaml  vite.config.ts
ui/android/app/: build.gradle.kts
ui/android/app/src/main/: AndroidManifest.xml
ui/flutter/: .gitignore  pubspec.yaml
ui/flutter/android/: build.gradle.kts
ui/flutter/android/app/: build.gradle  build.gradle.kts
ui/flutter/android/app/src/main/: AndroidManifest.xml
ui/flutter/android/app/src/main/kotlin/com/example/tress/: MainActivity.kt  NotificationsPlugin.kt  UnifiedPushService.kt
ui/flutter/android/app/src/main/kotlin/dev/hasali/tress/: MainActivity.kt  NotificationsPlugin.kt  UnifiedPushService.kt
ui/flutter/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
ui/flutter/lib/: api_client.dart  client.dart  main.dart  main.gr.dart  models.dart  preferences_repo.dart  router.dart  router.gr.dart
ui/flutter/lib/pages/: feeds_page.dart  home_page.dart  posts_page.dart
ui/flutter/lib/routes/: login_page.dart  posts_page.dart
ui/flutter/test/: widget_test.dart
ui/flutter/windows/runner/: Runner.rc
ui/lib/: api_client.dart  auth_service.dart  main.dart  models.dart
ui/lib/pages/: feeds_page.dart  posts_page.dart
ui/src/: App.tsx  sw.ts
ui/web/: index.html  vite.config.ts
ui/web/public/: manifest.json
ui/web/src/: App.tsx  push.ts  sw.ts
ui/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
