[package]
name = "tress"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration"]

[dependencies]
axum = "0.8.4"
color-eyre = "0.6.5"
eyre = "0.6.12"
itertools = "0.14.0"
migration = { path = "migration" }
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
