[package]
name = "tress"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration"]

[dependencies]
atom_syndication = "0.12.7"
axum = "0.8.4"
backon = "1.5.1"
base64ct = "1.8.0"
chrono = "0.4.41"
color-eyre = "0.6.5"
eyre = "0.6.12"
itertools = "0.14.0"
log = "0.4.27"
migration = { path = "migration" }
reqwest = { version = "0.12.20", features = ["rustls-tls"], default-features = false }
rss = "2.0.12"
scraper = "0.23.1"
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
web-push-native = "0.4.0"
